Align Artifact metadata to Map.copyOf for create and restore